--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE HTML>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>KPremananda's Portfolio</title>
+    </head>
+    <body>
+        <h1>Hello World!</h1>
+    </body>
+</html>
